--- a/Changes
+++ b/Changes
@@ -1,11 +1,29 @@
 Revision history for Perl extension Module::Build.
 
+0.33_05 - Sun Jun 28 22:06:49 EDT 2009
+
+ Enhancements:
+ - New 'auto_configure_requires' parameter (default 1) controls
+   whether Module::Build should add itself to configure_requires
+   in META.yml if not specified in Build.PL [David Golden]
+
+ Bug-fixes:
+ - The default MANIFEST.SKIP created by the "manifest" action
+   was out of date.  It will now use the installed MANIFEST.SKIP
+   and add some Module::Build and distribution specific items
+   to it. [Michael Schwern]
+
+ Other:
+ - configure_requires do not necessarily need to be in requires
+   or build_requires; warning to that effect has been removed
+   [David Golden]
+
 0.33_04 - Fri Jun 26 07:09:06 EDT 2009
 
  Bug-fixes:
  - Don't try utf8 YAML I/O on Perl 5.6 [David Golden]
 
- Other
+ Other:
  - configure_requires added to prereq report (RT#47254) [Curtis Jewell]
  - updated Module::Build::Version to match forthcoming version.pm 0.77
    (RT#47256) [John Peacock]
