Import of DAGOLDEN/Module-Build-0.34_01 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.34_01
gitpan-cpan-path:         DAGOLDEN/Module-Build-0.34_01.tar.gz
gitpan-cpan-author:       DAGOLDEN
gitpan-cpan-maturity:     developer

--- a/README
+++ b/README
@@ -549,6 +549,10 @@ OPTIONS
         invoked when building the distribution (i.e. when the "Build.PL"
         script was first run). Use with caution.
 
+    debug
+        Prints Module::Build debugging information to STDOUT, such as a
+        trace of executed build actions.
+
   Default Options File (.modulebuildrc)
     [version 0.28]
 
