--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Module::Build.
 
+0.34_02 - Sun Jul 26 22:50:40 EDT 2009
+
+ Bug-fixes:
+ - Bundled Module::Build::Version updated to bring into sync with CPAN
+   version.pm 0.77
+
 0.34_01 - Sat Jul 18 16:32:09 EDT 2009
 
  Enhancements:
