--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Perl extension Module::Build.
 
+0.34_06 - Sat Aug 22 21:58:26 EDT 2009
+
+ Bug fixes:
+ - Multiple test fixes for OS2 [Ilya Zakharevich]
+ - Generated.ppd files use :utf8 if possible (RT#48827) [Olivier Mengue]
+ - Fixed preservation of custom install_paths on resume (RT#41166)
+   [David Golden]
+ - Warn instead of crashing when Pod::Man tries to create files with
+   colons on vfat partitions on unix (RT#45544) [David Golden]
+
 0.34_05 - Sun Aug  9 22:31:37 EDT 2009
 
  Bug fixes:
