--- a/Changes
+++ b/Changes
@@ -1,9 +1,34 @@
 Revision history for Perl extension Module::Build.
 
+0.35_01 - Mon Aug 31 12:11:10 EDT 2009
+
+ Enhancements
+ - Generates MYMETA.yml during Build.PL (new standard protocol for 
+   communicating configuration results between toolchain components)
+   [David Golden]
+ - Added 'share_dir' property to provide File::ShareDir support;
+   set automatically if a directory called 'share' exists
+   [David Golden]
+
+ Bug fixes:
+ - Fix the t/destinations.t fix. [David Golden, with thanks to Eric Wilhelm]
+ - Fix recursive test files in generated Makefile.PL (RT#49254) [Sawyer X]
+ - Guard against trying :utf8 when :utf8 isn't available
+ - The "test" action now dies when using the 'use_tap_harness'
+   option and tests fail, matching the behavior under Test::Harness. 
+   (RT#49080) [initial patch from David Wheeler; revised by David Golden]
+
+ Other:
+ - Added t/README.pod and t/sample.t to guide developers writing new tests
+   [David Golden, with some code from Eric Wilhelm]
+ - Module::Build::Compat 'passthrough' style has been deprecated.  Using
+   'passthrough' will issue warnings on Makefile.PL generation.  See
+   Module::Build::Compat documentation for rationale.
+
 0.35 - Thu Aug 27 09:12:02 EDT 2009
 
  Bug fixes:
- - Fix t/destinations.t segfault on 5.6.2
+ - Fix t/destinations.t segfault on 5.6.2 [David Golden]
 
 0.34_06 - Sat Aug 22 21:58:26 EDT 2009
 
