--- a/Changes
+++ b/Changes
@@ -1,8 +1,44 @@
 Revision history for Perl extension Module::Build.
 
+0.35_02 - Mon Sep  7 22:37:42 EDT 2009
+
+ Enhancements:
+ - Added 'needs_compiler' property.  Defaults to true if XS or c_source
+   exist.  If true, ExtUtils::CBuilder is also added to build_requires.
+   [David Golden]
+ - File::ShareDir automatically added to 'requires' if 'share_dir' is set
+   [David Golden]
+ - Added 'Build installdeps' action to install needed dependencies via
+   a user-configurable command line program.  (Defaults to 'cpan'.)
+   [Eric Wilhelm]
+
+ Bug fixes:
+ - Failure to detect a compiler will now warn during Build.PL and be a
+   fatal error when trying to compile during Build. (RT#48918) [David
+   Golden]
+ - Fixed directory sorting failure in share_dir.t [David Golden]
+ - Property defaults that are data structures were being assigned as
+   references to new objects. Changed so that defaults are cloned instead.
+   (This mostly affects testing, which often creates multiple objects in the
+   same process) [David Golden]
+ - Simplified error message on exit under use_tap_harness [suggested by
+   David Wheeler]
+ - Fixed typemap search to use a dist-level typemap if a typemap is not
+   found in the directory with the *.xs file; (was manifesting as warnings
+   in Perl 5.6 tests) [David Golden]
+
+ Other:
+ - Replaced guts of new_from_context().  Build.PL is now executed in a
+   separate process before resume() is called.  (This is generally only of
+   interest to Module::Build or toolchain developers) (RT#49350) [David
+   Golden, Eric Wilhelm, Ken Williams]
+ - Revised test helper classes to fix potential bugs and add new features
+   to make writing tests simpler and easier.  Changes incorporated into
+   t/README.pod and t/sample.t as examples for new testing. [David Golden]
+
 0.35_01 - Mon Aug 31 12:11:10 EDT 2009
 
- Enhancements
+ Enhancements:
  - Generates MYMETA.yml during Build.PL (new standard protocol for 
    communicating configuration results between toolchain components)
    [David Golden]
