Import of DAGOLDEN/Module-Build-0.35_12 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.35_12
gitpan-cpan-path:         DAGOLDEN/Module-Build-0.35_12.tar.gz
gitpan-cpan-author:       DAGOLDEN
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Module::Build.
 
+0.35_12 - Fri Dec  4 23:06:49 EST 2009
+
+ Bug fixes:
+
+ - Protect inc/ bundling tests against broken ExtUtils::Installed
+
 0.35_11 - Thu Dec  3 11:07:44 EST 2009
 
  *** API CHANGE ***
