--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Module::Build.
 
+0.35_13 - Sat Dec  5 11:26:36 EST 2009
+
+ - Protect against tempfile errors when checking ExtUtils::Installed
+
 0.35_12 - Fri Dec  4 23:06:49 EST 2009
 
  Bug fixes:
