--- a/Changes
+++ b/Changes
@@ -1,5 +1,21 @@
 Revision history for Perl extension Module::Build.
 
+0.3601 - Mon Dec 21 14:39:33 EST 2009
+
+ Bug fixes:
+
+ - When the currently running Module::Build is not the same as the one
+   that created the Build file, there is now a warning rather than a fatal
+   error.  This helps installation of dependency chains where a dependency
+   might configure_requires a new Module::Build after Build.PL was already
+   run for an earlier distribution. [David Golden, on advice of Matt Trout]
+
+ Other:
+
+ - t/bundle_inc.t fails in odd ways.  This test of an experimental feature
+   should not prevent users from installing Module::Build, so this test
+   now skips unless $ENV{MB_TEST_EXPERIMENTAL} is true
+
 0.36 - Sun Dec 20 15:02:38 EST 2009
 
 No changes from 0.35_15 other than the version number.
