--- a/Changes
+++ b/Changes
@@ -1,5 +1,22 @@
 Revision history for Perl extension Module::Build.
 
+0.36_04 - Tue Mar 16 21:41:41 EDT 2010
+
+ Bug fixes:
+
+ - Added missing newline to "Changing sharpbang" messages under verbose
+   output (RT#54474) [David Golden]
+
+ - Added 'beos' to list of Unix-like os types (RT#53876) [Nigel Horne]
+
+ - Sets $ENV{HOME} to a temporary directory during testing [David Golden]
+
+ - For VMS: fixed prefix handling plus other test fixes [Craig Berry]
+
+ - Support anonymous array of directories for c_source [Alberto Simões]
+
+ - Small POD formatting fix [James Keenan]
+
 0.3603 - Mon Jan 18 22:28:59 EST 2010
 
 (Oops, I released the last one before I realized this should have been
