Import of DAGOLDEN/Module-Build-0.3607 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.3607
gitpan-cpan-path:         DAGOLDEN/Module-Build-0.3607.tar.gz
gitpan-cpan-author:       DAGOLDEN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension Module::Build.
 
+0.3607 - Thu Apr  1 11:27:16 EDT 2010
+
+ Bug fixes:
+
+ - The 'dist' action now always ensures a clean dist directory before
+   creating the tarball [David Golden]
+
 0.36_06 - Thu Apr  1 01:23:58 EDT 2010
 
  Other:
