--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension Module::Build.
 
+0.36_09 - Tue May 11 09:19:12 EDT 2010
+
+  Bug fixes:
+
+  - Improve HTML documentation generation on ActivePerl (RT#53478)
+    [Scott Renner and Klaus Eichner]
+
 0.36_08 - Mon Apr 26 08:00:15 EDT 2010
 
  Enhancements:
