--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension Module::Build.
 
+0.36_13 - Wed Jul 28 22:40:25 EDT 2010
+
+ Bug-fixes:
+
+ - Bundled Module::Build::Version updated to bring into sync with CPAN
+   version.pm 0.82 [David Golden]
+
 0.36_12 - Tue Jul 27 00:08:51 EDT 2010
 
   Enhancements:
