--- a/Changes
+++ b/Changes
@@ -1,5 +1,19 @@
 Revision history for Perl extension Module::Build.
 
+0.36_14 - Sun Aug 22 22:56:50 EDT 2010
+
+  Enhancements:
+
+  - Adds 'release_status' and 'dist_suffix' properties in preparation
+    for adding CPAN Meta Spec 2 support.  'dist_suffix' will be set
+    to 'TRIAL' automatically when necessary. [David Golden]
+
+  - Makes 'license' more liberal.  You can now specify either a license
+    key from the approved list (c.f. Module::Build::API) or just a
+    Software::License subclass name (e.g. 'Perl_5').  This should
+    provide better support for custom or proprietary licenses.
+    [David Golden]
+
 0.36_13 - Wed Jul 28 22:40:25 EDT 2010
 
  Bug-fixes:
