Import of DAGOLDEN/Module-Build-0.36_17 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.36_17
gitpan-cpan-path:         DAGOLDEN/Module-Build-0.36_17.tar.gz
gitpan-cpan-author:       DAGOLDEN
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension Module::Build.
 
+0.36_17 - Wed Oct 27 18:08:36 EDT 2010
+
+  Enhancements:
+
+  - Added 'distinstall' action to run 'Build install' inside the
+    generated distribution directory [Jeff Thalhammer]
+
 0.36_16 - Thu Aug 26 12:44:07 EDT 2010
 
   Bug fixes:
