--- a/Changes
+++ b/Changes
@@ -1,5 +1,64 @@
 Revision history for Perl extension Module::Build.
 
+0.36_18 - Mon Dec  6 16:46:49 EST 2010
+
+  Changes:
+
+  - Added dependency on Perl::OSType to refactor and centralize
+    management of OS type mapping [David Golden]
+
+  - When parsing a version number out of a file, any trailing alphabetical
+    characters will be dropped to avoid fatal errors when comparing version
+    numbers.  These would have been dropped (with a warning) anyway during
+    an ordinary numeric comparison. (RT#56071) [David Golden]
+
+  Bug fixes:
+
+  - A Perl interpreter mismatch between running Build.PL and running Build
+    is now a fatal error, not a warning (RT#55183) [David Golden]
+
+  - Bundled Module::Build::Version updated to bring into sync with CPAN
+    version.pm 0.86 [David Golden]
+
+  - No longer uses fake user 'foo' in t/tilde (RT#61793) [David Golden]
+
+  - Won't fail tests if an ancient Tie::IxHash is installed
+    [Christopher J. Madsen]
+
+  - Correctly report missing metafile field names [David Golden]
+
+  - Suppress uninitialized value errors during Pod creation
+    on ActiveState Perl [David Golden]
+
+  - Return to starting directory after install action; this is
+    an attempt to fix an install.t heisenbug (RT#63003) [David Golden]
+
+  - A broken version.pm load won't cause Module::Build::Version to
+    die trying to install itself as a mock version (RT#59499)
+    [Eric Wilhelm and David Golden]
+
+  - PERL_DL_NONLAZY is now always set when tests are run
+    (RT#56055) [Dmitry Karasik]
+
+  - 'fakeinstall' will use .modulebuildrc actions for 'install' if
+    no specific 'fakeinstall' options are provided (RT#57279)
+    [David Golden]
+
+  - Add install*script to search path for installdeps client
+    and search site, then vendor, then core paths
+
+  - Skip noexec tmpdir check on Windows (RT#55667) [Jan Dubois]
+
+  - Arguments with key value pairs may now have keys with "-" in them
+    (RT#53050) [David Golden]
+
+  - Add quotemeta to t/tilde.t test to fix Cygwin fails
+    [Chris Williams and David Golden]
+
+  - Build script now checks that M::B is at least the same version
+    of M::B as provided in 'configure_requires' in META
+    (RT#54954) [David Golden]
+
 0.36_17 - Wed Oct 27 18:08:36 EDT 2010
 
   Enhancements:
