Import of DAGOLDEN/Module-Build-0.37_06 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.37_06
gitpan-cpan-path:         DAGOLDEN/Module-Build-0.37_06.tar.gz
gitpan-cpan-author:       DAGOLDEN
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 Revision history for Perl extension Module::Build.
 
+0.37_06 - Mon Feb 28 21:43:31 EST 2011
+
+  [BUG FIXES]
+
+  - prerequisites with the empty string instead of a version are
+    normalized to "0".  (RT#65909)
+
+  [OTHER]
+
+  - More Pod typo/link fixes [Hongwen Qiu]
+
 0.37_05 - Sat Feb 19 20:43:23 EST 2011
 
   [BUG FIXES]
