--- a/README
+++ b/README
@@ -787,26 +787,30 @@ INSTALL PATHS
 
     prefix
         Provided for compatibility with "ExtUtils::MakeMaker"'s PREFIX
-        argument. "prefix" should be used when you wish Module::Build to
-        install your modules, documentation and scripts in the same place
-        "ExtUtils::MakeMaker" does.
+        argument. "prefix" should be used when you want Module::Build to
+        install your modules, documentation, and scripts in the same place
+        as "ExtUtils::MakeMaker"'s PREFIX mechanism.
 
         The following are equivalent.
 
             perl Build.PL --prefix /tmp/foo
             perl Makefile.PL PREFIX=/tmp/foo
 
-        Because of the very complex nature of the prefixification logic, the
+        Because of the complex nature of the prefixification logic, the
         behavior of PREFIX in "MakeMaker" has changed subtly over time.
         Module::Build's --prefix logic is equivalent to the PREFIX logic
         found in "ExtUtils::MakeMaker" 6.30.
 
-        If you do not need to retain compatibility with
-        "ExtUtils::MakeMaker" or are starting a fresh Perl installation we
-        recommend you use "install_base" instead (and "INSTALL_BASE" in
-        "ExtUtils::MakeMaker"). See "Instaling in the same location as
-        ExtUtils::MakeMaker" in Module::Build::Cookbook for further
-        information.
+        The maintainers of "MakeMaker" do understand the troubles with the
+        PREFIX mechanism, and added INSTALL_BASE support in version 6.31 of
+        "MakeMaker", which was released in 2006.
+
+        If you don't need to retain compatibility with old versions
+        (pre-6.31) of "ExtUtils::MakeMaker" or are starting a fresh Perl
+        installation we recommend you use "install_base" instead (and
+        "INSTALL_BASE" in "ExtUtils::MakeMaker"). See "Installing in the
+        same location as ExtUtils::MakeMaker" in Module::Build::Cookbook for
+        further information.
 
 MOTIVATIONS
     There are several reasons I wanted to start over, and not just fix what
@@ -846,15 +850,14 @@ MOTIVATIONS
     *   It is risky to make major changes to "MakeMaker", since it does so
         many things, is so important, and generally works. "Module::Build"
         is an entirely separate package so that I can work on it all I want,
-        without worrying about backward compatibility.
+        without worrying about backward compatibility with "MakeMaker".
 
     *   Finally, Perl is said to be a language for system administration.
         Could it really be the case that Perl isn't up to the task of
         building and installing software? Even if that software is a bunch
-        of stupid little ".pm" files that just need to be copied from one
-        place to another? My sense was that we could design a system to
-        accomplish this in a flexible, extensible, and friendly manner. Or
-        die trying.
+        of ".pm" files that just need to be copied from one place to
+        another? My sense was that we could design a system to accomplish
+        this in a flexible, extensible, and friendly manner. Or die trying.
 
 TO DO
     The current method of relying on time stamps to determine whether a
@@ -876,7 +879,7 @@ AUTHOR
     <http://rt.cpan.org/NoAuth/Bugs.html?Dist=Module-Build>.
 
     The latest development version is available from the Git repository at
-    <https://github.com/dagolden/module-build/>
+    <https://github.com/Perl-Toolchain-Gang/Module-Build>
 
 COPYRIGHT
     Copyright (c) 2001-2006 Ken Williams. All rights reserved.
