Import of LEONT/Module-Build-0.4001 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.4001
gitpan-cpan-path:         LEONT/Module-Build-0.4001.tar.gz
gitpan-cpan-author:       LEONT
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -702,7 +702,7 @@ INSTALL PATHS
 
           lib     => installprivlib  installsitelib      installvendorlib
           arch    => installarchlib  installsitearch     installvendorarch
-          script  => installscript   installsitebin      installvendorbin
+          script  => installscript   installsitescript   installvendorscript
           bin     => installbin      installsitebin      installvendorbin
           bindoc  => installman1dir  installsiteman1dir  installvendorman1dir
           libdoc  => installman3dir  installsiteman3dir  installvendorman3dir
