--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Perl extension Module::Build.
 
+0.4004 - Fri Mar 29 15:05:00 CET 2013
+
+  [BUG FIXES]
+
+  - Minor VMS fix for @INC [Craig Berry]
+
+  [ENHANCEMENTS]
+
+  - test_requires support has been added [Matsuno Tokuhiro]
+
 0.4003 - Sat Aug 18 11:17:49 CEST 2012
 
   [BUG FIXES]
